fix: hide overflow

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 html, body {
-  max-width: 100%;
+  overflow-x: hidden;
 }
 
 body {
